feat: idea denormalize alternative to array